Added packets per day statistics.

--- a/index.html.j2
+++ b/index.html.j2
@@ -57,7 +57,8 @@
         </a></p>
         <img src="stats.png" class="img-fluid" alt="Verteilung der Packete pro Stunde">  
         <p>Error 7 (CRC Fehler) ist ein Maß für die Empfangstörungen am Standort.</p>
-
+        <img src="weekly.png" class="img-fluid" alt="Anzahl der Packete pro Tag im Messzeitraum">
+        <p>Die Grafik zeigt die Anzahl der empfangenen Packete pro Tag im Messzeitraum, unabhängig vom Typ.</p>
         <img src="daily.png" class="img-fluid" alt="Verteilung eindeutige Knoten über die Tageszeit im Messzeitraum">    
         <p>Die Grafik zeigt die Verteilung eindeutiger, aktiver Knoten über die Tageszeit im gesamten Messzeitraum.
            Die rote Linie bei 40 Knoten bezieht sich auf die eingebaute Skalierungsfunktion, die seit der Software
