Added update note.

--- a/index.html.j2
+++ b/index.html.j2
@@ -41,7 +41,7 @@
         <a href="https://www.mictronics.de/posts/Meshtastic-DietPi-OrangePi-Zero3/" target="_blank" class="link-secondary">Info</a>
     </p>
     <div class="vstack">
-        <div class="p-1">Letzte Aktualisierung: {{ last_update }}</div>
+        <div class="p-1">Letzte Aktualisierung: {{ last_update }} (einmal pro Tag)</div>
         <div class="p-1">Aktive Knoten in 24h: {{ node_count }}</div>
         <div class="p-1">Aktive Verbindungen in 24h: {{ link_count }}</div>
         <div class="p-1">Messzeitraum: {{ period }} (7 Tage, gleitend)</div>
