Added Github repo link.

--- a/index.html.j2
+++ b/index.html.j2
@@ -126,7 +126,7 @@
                 <img src="./images/{{ node.id }}.png" class="card-img-bottom" alt="{{ node.long_name }}" style="width: min-content;">
             </div>
         {% endfor %}
-        <footer">&copy;2025 Mictronics</footer>
+        <footer">&copy;2025 Mictronics - <a href="https://github.com/Mictronics/mesh-observer" target="_blank">Fork me on GitHub</a></footer>
     </div>
 </body>
 </html>
