Fixed telemetry packet counting. Added stats for crypted/unencrypted packets.

--- a/index.html.j2
+++ b/index.html.j2
@@ -57,6 +57,9 @@
         </a></p>
         <img src="stats.png" class="img-fluid" alt="Verteilung der Packete pro Stunde">  
         <p>Error 7 (CRC Fehler) ist ein Maß für die Empfangstörungen am Standort.</p>
+        <img src="decoding.png" class="img-fluid" alt="Verhältnis der verschlüsselten und unverschlüsselten Packete">
+        <p>Die Grafik zeigt das Verhältnis der verschlüsselten und entschlüsselten Packete. Für Packete die nicht entschlüsselt werden können
+        fehlt der private Schlüssel (PSK) oder die Packete sind als Direktnachricht (DM) verschlüsselt.</p>
         <img src="weekly.png" class="img-fluid" alt="Anzahl der Packete pro Tag im Messzeitraum">
         <p>Die Grafik zeigt die Anzahl der empfangenen Packete pro Tag im Messzeitraum, unabhängig vom Typ.</p>
         <img src="daily.png" class="img-fluid" alt="Verteilung eindeutige Knoten über die Tageszeit im Messzeitraum">    
