--- a/index.html.j2
+++ b/index.html.j2
@@ -101,7 +101,7 @@
     <div class="container w-75 float-start">
         <h1 class="display-6">Knoten Statistik</h1>
         <p class="lead">Nur Knoten mit einer Mesh Last >0.1% sind in der Liste aufgeführt.</p>    
-        <p>Die <em>Mesh Last</em> gibt den Anteil der Packete eines Knotens von der gesamten Packetanzahl während des Messzeitraumes an.</p>
+        <p>Die <em>Mesh Last</em> gibt den Anteil der Packete eines Knotens von der gesamten Packetanzahl während des Messzeitraumes an. Absteigend sortiert.</p>
         <p><em>Packete</em> eines Knotens während des Messzeitraumes</p>
         <p>Die Grafik zeigt die empfangenen Aussendungen des jeweiligen Knotens über den Messzeitraum. Der Messzeitraum ist unten in der Grafik angegeben. Jeder Punkt ist eine empfangene Aussendung.</p>
         <p> Der <a href="https://de.wikipedia.org/wiki/Median_(Stochastik)" target="_blank">Median</a> auf der rechten Seite gibt an, in welchem zeitlichen Abstand die Aussendungen empfangen wurden und lässt Rückschlüsse auf den eingestellten Intervall zu.
@@ -120,7 +120,7 @@
             <div class="card mb-2">
                 <div id="{{ node.id }}" class="card-header">{{ node.long_name }}<a class="anchor-link" href="#{{ node.id }}"></a></div>
                 <div class="card-body">
-                    <h6 class="card-subtitle mb-2 text-body-secondary">{{ node.id }}</h6>
+                    <h6 class="card-subtitle mb-2 text-body-secondary">{{ node.id }} - {{ node.role }}</h6>
                     <div class="hstack gap-3">
                         <div class="p-2">Mesh Last: {{ node.load }}%</div>
                         <div class="p-2">Packete: {{ node.packet_count }}</div>
