--- a/index.html.j2
+++ b/index.html.j2
@@ -9,6 +9,10 @@
     <meta name="keywords" content="meshtastic, netzwerk, knoten, bayern, statistik" />
     <meta name="robots" content="index, follow, archive">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link rel="icon" href="./favicon.ico">
+    <link rel="apple-touch-icon" href="./apple-touch-icon.png" sizes="180x180">
+    <link rel="icon" type="image/svg+xml" href="./icon.svg">
+    <link rel="manifest" href="./site.webmanifest">
     <style>
         .anchor-link {
             padding: 0 .175rem;
@@ -41,7 +45,7 @@
         <a href="https://www.mictronics.de/posts/Meshtastic-DietPi-OrangePi-Zero3/" target="_blank" class="link-secondary">Info</a>
     </p>
     <div class="vstack">
-        <div class="p-1">Letzte Aktualisierung: {{ last_update }} (einmal pro Tag)</div>
+        <div class="p-1">Letzte Aktualisierung: {{ last_update }} (zweimal pro Tag)</div>
         <div class="p-1">Aktive Knoten in 24h: {{ node_count }}</div>
         <div class="p-1">Aktive Verbindungen in 24h: {{ link_count }}</div>
         <div class="p-1">Messzeitraum: {{ period }} (7 Tage, gleitend)</div>
