Added temporary development notice.

--- a/index.html.j2
+++ b/index.html.j2
@@ -39,6 +39,7 @@
 </head>
 <body class="m-1">
     <h1 class="display-6">Bayern Mesh</h1>
+    <p>Entwicklungsbetrieb - Datenerfassung nicht immer zuverlässig.</p>
     <p class="lead">Das Meshtastic Netzwerk in Bayern, empfangen in Donauwörth.</p>
     <p>
         Der Knoten <em>OP03 NFN-866#9 Mesh Observer</em> ist für die Datenerfassung zuständig.
