Added heatmap for packet per day per hour.

--- a/index.html.j2
+++ b/index.html.j2
@@ -62,6 +62,8 @@
         </a></p>
         <img src="stats.png" class="img-fluid" alt="Verteilung der Packete pro Stunde">  
         <p>Error 7 (CRC Fehler) ist ein Maß für die Empfangstörungen am Standort.</p>
+        <img src="hourly_heatmap.png" class="img-fluid" alt="Verteilung der Packete pro Tag über die Stunden">
+        <p>Die Grafik zeigt die die Anzahl der Packete pro Tag (der letzten 7 Tage) verteilt über die Stunden. Rot markiert das Maximum.</p>
         <img src="decoding.png" class="img-fluid" alt="Verhältnis der verschlüsselten und unverschlüsselten Packete">
         <p>Die Grafik zeigt das Verhältnis der verschlüsselten und entschlüsselten Packete. Für Packete die nicht entschlüsselt werden können
         fehlt der private Schlüssel (PSK) oder die Packete sind als Direktnachricht (DM) verschlüsselt.</p>
