--- a/index.html.j2
+++ b/index.html.j2
@@ -39,7 +39,6 @@
 </head>
 <body class="m-1">
     <h1 class="display-6">Bayern Mesh</h1>
-    <p>Entwicklungsbetrieb - Datenerfassung nicht immer zuverlässig.</p>
     <p class="lead">Das Meshtastic Netzwerk in Bayern, empfangen in Donauwörth.</p>
     <p>
         Der Knoten <em>OP03 NFN-866#9 Mesh Observer</em> ist für die Datenerfassung zuständig.
@@ -51,6 +50,7 @@
         <div class="p-1">Aktive Verbindungen in 24h: {{ link_count }}</div>
         <div class="p-1">Messzeitraum: {{ period }} (7 Tage, gleitend)</div>
         <div class="p-1">Packete gesamt: {{ total_packets }}</div>
+        <div class="p-1">Modem Voreinstellung: LongFast</div>
     </div>
 
     <div class="container float-start">
